Content view on mobile devices fixed

--- a/src/css/common.less
+++ b/src/css/common.less
@@ -265,7 +265,9 @@ ul {
     }
 
     .column {
+        display: inline-block;
         padding: 0 20px;
+        vertical-align: top;
         box-sizing: border-box;
 
         &:first-child {
@@ -274,6 +276,25 @@ ul {
  
         &:last-child {
             padding-right: 0;
+        }
+
+        /* two columns */
+        &:nth-child(1):nth-last-child(2),
+        &:nth-child(2):nth-last-child(1) {
+            width: 50%;
+        }
+
+        /* three columns */
+        &:nth-child(1):nth-last-child(3),
+        &:nth-child(2):nth-last-child(2),
+        &:nth-child(3):nth-last-child(1) {
+            width: 33%;
+        }
+
+        .row {
+            &:not(:last-child) {
+                margin-bottom: 15px;
+            }
         }
     }
 
